# gdoc-skill

./: .gitignore  ARCHITECTURE.md  INSTALL-DEV.md  INSTALLATION.md  QUICKSTART.md  README.md  SKILL.md  install-uv.sh  install.sh  install_all.sh  pyproject.toml  test-upload.md
gdoc_common/: __init__.py  google_api.py  models.py  utils.py
gdoc_fetch/: __init__.py  auth.py  changes.py  cli.py  cli_changes.py  cli_upload.py  converter.py  docs_builder.py  google_api.py  markdown_parser.py  pyproject.toml  writer.py
gdoc_upload/: __init__.py  cli.py  docs_builder.py  drive_client.py  markdown_parser.py  pyproject.toml
tests/fixtures/: test_document.md
tests/integration/: conftest.py  test_gdoc_changes_integration.py  test_gdoc_fetch_integration.py  test_gdoc_upload_integration.py
tests/unit/: test_auth.py  test_changes.py  test_cli.py  test_converter.py  test_docs_builder.py  test_drive_client.py  test_google_api.py  test_images.py  test_markdown_parser.py  test_models.py  test_utils.py  test_writer.py
verify-upload/test-upload-markdown-to-docs/: test-upload-markdown-to-docs.md
