[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdoc-upload"
version = "0.1.0"
description = "Upload Markdown to Google Docs with images"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "markdown>=3.4.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = [".."]
include = ["gdoc_common", "gdoc_upload"]

[project.scripts]
gdoc-upload = "gdoc_upload.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]
